--- a/Anttask.html
+++ b/Anttask.html
@@ -14,12 +14,14 @@
         
         </div>
     <div class="para">
-        <p class="icon1"><i class="fa-solid fa-face-smile-beam"></i></p>
+        <p class="icon1"><i class="fa
+            -solid fa-face-smile-beam"></i></p>
         <p class="para1">Ant Collector</p>
     <h1>Morgan Sweeney</h1>
     <p>Morgan has collected ants since they were six years 
         old and now has many dozen ants but none in their pants.</p>
-   <p class="icon"><i class="fa-regular fa-heart"></i>    <i class="fa-regular fa-envelope"></i>    <i class="fa-solid fa-user-group"></i></p>
+   <p class="icon"><i class="fa-regular fa-heart"></i>    <i class="fa-regular fa-envelope"></i>    
+    <i class="fa-solid fa-user-group"></i></p>
     </div>
 </div>
 </body>
