--- a/Anttask.html
+++ b/Anttask.html
@@ -14,8 +14,7 @@
         
         </div>
     <div class="para">
-        <p class="icon1"><i class="fa
-            -solid fa-face-smile-beam"></i></p>
+        <p class="icon1"><i class="fa-solid fa-face-smile-beam"></i></p>
         <p class="para1">Ant Collector</p>
     <h1>Morgan Sweeney</h1>
     <p>Morgan has collected ants since they were six years 
